tests/field/set_on_null.rev
null.bar = "str" // error: only structure instances have properties